src/objects/Support__c.object
<CustomObject>
    <fields>
        <fullName>Application__c</fullName>
        <label>Application</label>
        <referenceTo>Application__c</referenceTo>
        <relationshipLabel>Supports</relationshipLabel>
        <relationshipName>Supports</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Name_of_the_Organisation__c</fullName>
        <label>Name of the Organisation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Potential_Value_of_Funding__c</fullName>
        <label>Potential Value of Funding</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Work_to_Be_Funded__c</fullName>
        <label>Work to Be Funded</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Support</label>
    <nameField>
        <displayFormat>S-{0000000}</displayFormat>
        <label>Support Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Supports</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>